Fix z-index bug

--- a/src/Dropdown.css
+++ b/src/Dropdown.css
@@ -17,7 +17,7 @@ button.dropdown {
 
     transition: background-color 0.5s ease;
     position: relative;
-    z-index: 10;
+    z-index: 5;
 }
 
 button.dropdown:hover {
